--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon --exec \"mocha --recursive -R min\""
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "mocha": "^5.0.5",
-    "mongoose": "^5.0.12"
+    "mongoose": "^5.0.12",
+    "supertest": "^3.0.0"
   }
 }
